@@ -19,6 +19,12 @@ CHANGES
     is an outer join, thus allowing primary rows without
     a referenced child row to be correctly returned
     in results.  [ticket:1954]
+
+- engine
+  - Implemented sequence check capability for the C 
+    version of RowProxy, as well as 2.7 style 
+    "collections.Sequence" registration for RowProxy.
+    [ticket:1871]
     
 - mysql
   - Fixed error handling for Jython + zxjdbc, such that 
